--- a/sass/main.sass
+++ b/sass/main.sass
@@ -705,7 +705,7 @@ body
 		display: flex
 		align-items: center
 		justify-content: center
-		padding: 100px 0 120px 0
+		padding: 100px 0 50px 0
 	&-image
 		margin: 0 60px 0 -100px
 	&__info
@@ -766,6 +766,221 @@ body
 		transition: all 0.3s ease
 		&:hover
 			background-color: darken(#FAE05E, 25%)
+
+// partners ///////////////////////////////////////////////////////////////////////////////////////////////////
+.partners
+
+	padding: 120px 0 0 0
+	&-wrapper
+		display: flex
+		align-items: center
+		justify-content: space-between
+		background-color: #f9f9f9
+		padding: 20px 16px 15px 16px
+	&-item
+
+// map ///////////////////////////////////////////////////////////////////////////////////////////////////
+
+.map
+	position: relative
+	min-height: 560px
+	&-wrapper
+		position: absolute
+		left: 0
+		top: 0
+		right: 0
+		bottom: 0
+		width: 100%
+		height: 560px
+	&_container
+		display: flex
+		flex-direction: column
+		justify-content: center
+		align-items: flex-end
+		height: 560px
+	&-info
+		width: 400px
+		min-height: 320px
+		position: relative
+		padding: 50px
+		background-color: rgba(0, 0, 0, 0.86)
+	&-item
+		display: flex
+		align-items: center
+		justify-content: flex-start
+		color: #fff
+
+		&:not(:last-child)
+			margin: 0 0 35px 0
+		img
+			width: 24px
+			height: 24px
+			margin: 0 10px 0 0
+		h5
+			font-weight: bold
+			font-size: 14px
+			line-height: 17px
+		&__schedule
+			display: flex
+			flex-direction: column
+			align-items: flex-start
+			&__block
+				display: flex
+				align-items: center
+			ul
+				list-style: none
+				margin: 5px 0 0 0
+				padding: 0 0 0 34px
+				li
+					font-weight: 500
+					font-size: 14px
+					line-height: 17px
+					color: #C4C4C4
+		&__call
+			a
+				font-weight: bold
+				font-size: 14px
+				line-height: 17px
+				text-decoration: none
+				color: #FFFFFF
+				transition: all 0.2s linear
+				&:hover
+					color: darken(#fff, 30%)
+		&__mail
+			display: flex
+			align-items: center
+			margin: 0 60px 0 0
+			a
+				font-weight: bold
+				font-size: 14px
+				line-height: 17px
+				color: #FFFFFF
+				transition: all 0.2s linear
+				&:hover
+					color: darken(#fff, 30%)
+		&__social
+			width: 77px
+			display: flex
+			align-items: center
+			justify-content: space-between
+			a
+				svg
+					fill: #fff
+					width: 24px
+					height: 23px
+					transition: all 0.2s linear
+					&:hover
+						fill: darken(#fff, 30%)
+
+// footer ///////////////////////////////////////////////////////////////////////////////////////////////////
+
+.footer
+	padding: 60px 60px 36px 60px
+	background-color: #000
+	color: #fff
+	&-wrapper
+		display: flex
+		row-gap: 110px
+		flex-direction: column
+		justify-content: space-between
+	&-content
+		width: 100%
+		display: flex
+		align-items: flex-start
+		justify-content: space-between
+
+	&-logo
+
+	&-nav
+		ul
+			display: flex
+			align-items: center
+			justify-content: space-between
+			column-gap: 60px
+			list-style: none
+			margin: 0
+			padding: 0
+			li
+				font-weight: 500
+				font-size: 14px
+				line-height: 17px
+				a
+					color: #C4C4C4
+					text-decoration: none
+					transition: all 0.2s linear
+					&:hover
+						color: darken(#C4C4C4, 20%)
+	&-description
+		width: 100%
+		display: flex
+		align-items: flex-start
+		justify-content: space-between
+		&__text
+			font-weight: 500
+			font-size: 14px
+			line-height: 17px
+			color: #C4C4C4
+		&__about
+			font-weight: 500
+			font-size: 14px
+			line-height: 17px
+			text-align: right
+			color: #C4C4C4
+			span
+				font-weight: 500
+				font-size: 14px
+				line-height: 17px
+				text-align: right
+				color: #696666
+
+// modal ///////////////////////////////////////////////////////////////////////////////////////////////////
+
+.modal
+	position: relative
+	z-index: 100
+	&-overlay
+		position: fixed
+		left: 0
+		top: 0
+		right: 0
+		bottom: 0
+		background-color: #000000d7
+		z-index: 99
+		visibility: hidden
+		opacity: 0
+		transition: opacity 0.2s linear
+		&--visible
+			visibility: visible
+			opacity: 1
+	&-dialog
+		position: fixed
+		top: 50%
+		left: 50%
+		max-width: 710px
+		max-height: 475px
+		transform: translate(-50%, -50%)
+		padding: 70px 150px 70px 130px
+		background-image: url('../img/modal-bg.jpg')
+		background-position: center
+		background-repeat: no-repeat
+		background-size: cover
+		color: #fff
+		z-index: 100
+		visibility: hidden
+		opacity: 0
+		transition: opacity 0.2s linear
+		&--visible
+			visibility: visible
+			opacity: 1
+	&-close
+		position: absolute
+		top: 10px
+		right: 10px
+		cursor: pointer
+		text-decoration: none
+	&-wrapper
+
+	&-block
 
 // media ///////////////////////////////////////////////////////////////////////////////////////////////////
 
