--- a/sass/main.sass
+++ b/sass/main.sass
@@ -944,7 +944,7 @@ body
 		top: 0
 		right: 0
 		bottom: 0
-		background-color: #000000d7
+		background-color: #000000ce
 		z-index: 99
 		visibility: hidden
 		opacity: 0
@@ -972,6 +972,19 @@ body
 		&--visible
 			visibility: visible
 			opacity: 1
+		&::before
+			content: ''
+			position: absolute
+			width: 100%
+			height: 100%
+			top: 0
+			left: 0
+			right: 0
+			bottom: 0
+			background-color: rgba(0, 0, 0, 0.58)
+			box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.25)
+			z-index: -1
+
 	&-close
 		position: absolute
 		top: 10px
