edit: header_scroll issue

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -48,6 +48,7 @@ body
 	width: 100%
 	background-color: #E9E9E9
 	transition: all 0.3s linear
+	// z-index: 99
 	&-wrapper
 		position: relative
 		display: flex
@@ -138,10 +139,6 @@ body
 
 	&_scroll
 		background-color: #fff
-		left: 0
-		top: 0
-		right: 0
-
 		z-index: 99
 
 // main ///////////////////////////////////////////////////////////////////////////////////////////////////
