--- a/sass/main.sass
+++ b/sass/main.sass
@@ -349,13 +349,12 @@ body
 			// padding: 23px 37px
 			padding: 23px 16px 5px 21px
 			overflow: hidden
-			transition: transform 0.8s
-			transform-style: preserve-3d
+			transition: transform 0.6s linear
+			// transform-style: preserve-3d
 			// &:hover	.services-item__hidden-text
 				// top: 0
 				// opacity: 1
 				// filter: blur(0)
-
 			&::before
 				content: ''
 				position: absolute
@@ -366,6 +365,10 @@ body
 				right: 0
 				background: rgba(0, 0, 0, 0.7)
 				filter: blur(10px)
+				transition: opacity 0.4s linear, height 0.05s linear
+				transition-delay: 0s, 0.25s
+
+				// transition: all 2s linear
 		&__bg
 			position: absolute
 			left: 0
@@ -377,6 +380,7 @@ body
 			height: 100%
 			object-fit: cover
 			object-position: top
+			transition: all 0.5s linear
 
 		&__hidden-text
 			position: absolute
@@ -386,7 +390,7 @@ body
 			width: 100%
 			height: 100%
 			background-color: rgba(0, 0, 0, 0.4)
-			transition: all 0.3s ease-in-out
+			transition: all 0.5s linear
 			opacity: 0
 			filter: blur(10px)
 			p
@@ -409,7 +413,6 @@ body
 			justify-content: center
 			width: 100%
 			transition: all 0.7s linear
-
 		&__icon
 			width: 30px
 			margin: 0 10px 0 0
@@ -432,31 +435,22 @@ body
 			text-transform: uppercase
 			text-decoration: none
 			color: #000
-			transition: hover 0.3s ease, transform 0.5s linear
+			transition: hover 0.3s ease, transform 0.6s linear
 			&:hover
 				background: darken(#FAE05E, 25%)
 
-// .services-item--front, .services-item--back
-// 	position: absolute
-// 	top: 0
-// 	left: 0
-// 	width: 100%
-// 	height: 100%
-// 	padding: 23px 16px 5px 21px
-// 	-webkit-backface-visibility: hidden
-// 	backface-visibility: hidden
-
-.services-item--back
-	// transform: rotateY(180deg)
-
 .services-item__info_active
 	transform: rotateY(180deg)
+	&::before
+		// opacity: 0
+		height: 100%
+		bottom: 0
 	.services-item__hidden-text
 		opacity: 1
 		filter: blur(0)
 		transform: rotateY(180deg)
 	.services-item__bg
-		// transform: rotateY(180deg)
+		transform: scale(-1, 1)
 	.services-item__name
 		transform: rotateY(180deg)
 .services-item__button_active
