--- a/sass/main.sass
+++ b/sass/main.sass
@@ -51,7 +51,7 @@ body
 	width: 100%
 	background-color: #E9E9E9
 	transition: all 0.3s linear
-	// z-index: 99
+	z-index: 100
 	&-wrapper
 		position: relative
 		display: flex
@@ -69,6 +69,7 @@ body
 			background-color: #f7f7f7
 			transition: all 0.1s linear
 			z-index: 0
+
 	&-logo
 		max-width: 84px
 		max-height: 64px
@@ -105,17 +106,16 @@ body
 	&-social
 		&__link
 			display: inline-block
-			svg
-				transition: all 0.3s ease
-				fill: #000
-			&:hover
-				svg
-					fill: darken(#FAE05E, 30%)
 			&:not(:last-child)
 				margin: 0 17px 0 0
 		&__icon
-			transition: all 0.3s ease
-
+			&--pc
+				transition: all 0.3s ease
+				fill: #000
+				&:hover
+					fill: darken(#FAE05E, 30%)
+			&--mobile
+				display: none
 	&-contacts
 		display: flex
 		flex-direction: column
@@ -143,7 +143,22 @@ body
 	&_scroll
 		background-color: #fff
 		z-index: 99
+	&-burger
+		display: none
+.header-burger._active
+	span
+		&:nth-child(2)
+			opacity: 0
+		&:nth-child(1)
+			top: 50%
+			transform: rotate(-45deg) translate(0px, -50%)
+		&:nth-child(3)
+			bottom: 50%
+			transform: rotate(45deg) translate(0px, 50%)
 
+.header
+	&-wrapper._active
+		border-bottom: 1px solid #C4C4C4
 // main ///////////////////////////////////////////////////////////////////////////////////////////////////
 
 .main
@@ -181,7 +196,7 @@ body
 		text-transform: uppercase
 		transition: all 0.3s ease
 		&:hover
-			background-color: darken(#FAE05E, 25%)
+			background-color: #FFEA82
 
 	&-content
 		display: flex
@@ -196,6 +211,8 @@ body
 		font-size: 18px
 		line-height: 22px
 		color: #000
+		&--mobile
+			display: none
 		span
 			position: relative
 		&::before
@@ -209,6 +226,9 @@ body
 			background-position: center
 			background-repeat: no-repeat
 			background-size: cover
+	&-form
+		&--mobile
+			display: none
 
 // video ///////////////////////////////////////////////////////////////////////////////////////////////////
 
@@ -435,9 +455,9 @@ body
 			text-transform: uppercase
 			text-decoration: none
 			color: #000
-			transition: hover 0.3s ease, transform 0.6s linear
+			transition: background 0.3s ease, transform 0.6s linear
 			&:hover
-				background: darken(#FAE05E, 25%)
+				background: #FFEA82
 
 .services-item__info_active
 	transform: rotateY(180deg)
@@ -595,7 +615,7 @@ body
 			color: #000
 			transition: all 0.4s ease
 			&:hover
-				background-color: darken(#FAE05E, 25%)
+				background-color: #FFEA82
 	&-title
 		font-style: normal
 		font-weight: bold
@@ -673,7 +693,7 @@ body
 	&-slide
 		// min-height: 369px
 
-// media ///////////////////////////////////////////////////////////////////////////////////////////////////
+// form ///////////////////////////////////////////////////////////////////////////////////////////////////
 
 .form
 	position: relative
@@ -742,6 +762,12 @@ body
 			margin: 0 0 20px 0
 		&__phone
 			margin: 0 0 30px 0
+			&--mobile
+				display: none
+				align-items: center
+				justify-content: flex-start
+				margin: 0 0 30px 0
+				border-bottom: 1px solid #FFFBFB
 	&-input
 		width: 100%
 		padding: 5px 10px
@@ -769,7 +795,7 @@ body
 		color: #000
 		transition: all 0.3s ease
 		&:hover
-			background-color: darken(#FAE05E, 25%)
+			background-color: #FFEA82
 
 // partners ///////////////////////////////////////////////////////////////////////////////////////////////////
 .partners
@@ -788,6 +814,8 @@ body
 .map
 	position: relative
 	min-height: 560px
+	&--mobile
+		display: none
 	&-wrapper
 		position: absolute
 		left: 0
@@ -914,17 +942,21 @@ body
 					transition: all 0.2s linear
 					&:hover
 						color: darken(#C4C4C4, 20%)
+		&--mobile
+			display: none
 	&-description
 		width: 100%
 		display: flex
 		align-items: flex-start
 		justify-content: space-between
 		&__text
+			padding: 0 15px 0 0
 			font-weight: 500
 			font-size: 14px
 			line-height: 17px
 			color: #C4C4C4
 		&__about
+			flex-shrink: 0
 			font-weight: 500
 			font-size: 14px
 			line-height: 17px
@@ -1002,6 +1034,52 @@ body
 	&-wrapper
 
 	&-block
+
+.hidden
+	&-menu
+		padding: 85px 20px 29px 15px
+		position: fixed
+		left: 0
+		top: -100%
+		right: 0
+		background-color: #fff
+		width: 100%
+		height: 100%
+		z-index: 99
+		opacity: 0
+		transition: all 0.3s linear
+		&--active
+			top: 0
+			opacity: 1
+
+		&__wrapper
+
+		&__list
+			ul
+				display: flex
+				flex-direction: column
+				row-gap: 30px
+				list-style: none
+				padding: 30px 0 40px 0
+				margin: 0 0 40px 0
+				border-bottom: 1px solid #C4C4C4
+				a
+					font-weight: 500
+					font-size: 14px
+					line-height: 17px
+					color: #000
+					text-decoration: none
+		&__phone
+			display: flex
+			align-items: center
+			img
+				margin: 0 20px 0 0
+			a
+				font-weight: 500
+				font-size: 14px
+				line-height: 17px
+				text-decoration: none
+				color: #000
 
 // media ///////////////////////////////////////////////////////////////////////////////////////////////////
 
